syntax = "proto3";

package rpc;

option java_multiple_files = true;
option java_package = "rpc";

// Week 3: Worker registration only
service MasterService {
  rpc RegisterWorker(WorkerInfo) returns (WorkerAssignment);

  // Week 4+: To be implemented
  // rpc SendSamples(SampleData) returns (PartitionInfo);
  // rpc ReportProgress(ProgressUpdate) returns (Ack);
}

// Worker registration info
message WorkerInfo {
  string ip = 1;
  int32 port = 2;
  repeated string input_dirs = 3;
  string output_dir = 4;
}

// Worker assignment response
message WorkerAssignment {
  int32 worker_id = 1;              // Assigned worker ID (0, 1, 2, ...)
  repeated int32 partition_ids = 2; // Partition IDs to handle (for later)
}

// Placeholder messages for future phases (Week 4+)
// message SampleData { ... }
// message PartitionInfo { ... }