package worker

import io.grpc.{ManagedChannel, ManagedChannelBuilder}
import io.grpc.stub.StreamObserver
import rpc.sort._
import scala.concurrent.{Promise, ExecutionContext}
import scala.concurrent.duration._
import java.util.concurrent.TimeUnit

class MasterClient(host: String, port: Int)(implicit ec: ExecutionContext) {

  private val channel: ManagedChannel =
    ManagedChannelBuilder
      .forAddress(host, port)
      .usePlaintext()
      .build()

  private val blockingStub = MasterServiceGrpc.blockingStub(channel)
  private val asyncStub = MasterServiceGrpc.stub(channel)

  /** Worker Îì±Î°ù */
  def register(workerInfo: WorkerInfo): WorkerAssignment = {
    println(s"üîå Connecting to Master at $host:$port...")
    val response = blockingStub.registerWorker(workerInfo)
    println(s"Registered as Worker #${response.workerId}")
    response
  }

  /** Heartbeat Ï†ÑÏÜ° */
  def sendHeartbeat(workerInfo: WorkerInfo): Unit = {
    val ack = blockingStub.heartbeat(workerInfo)
    if (ack.ok) {
      println(s"Heartbeat sent")
    }
  }

  /** ÏÉòÌîå Ï†ÑÏÜ° (Client Streaming) */
  def sendSamples(samples: Seq[Array[Byte]]): Splitters = {
    println(s"Sending ${samples.size} samples to Master...")

    val promise = Promise[Splitters]()

    // ÏùëÎãµÏùÑ Î∞õÏùÑ Observer
    val responseObserver = new StreamObserver[Splitters] {
      override def onNext(splitters: Splitters): Unit = {
        promise.success(splitters)
      }
      override def onError(t: Throwable): Unit = {
        Console.err.println(s"Error receiving splitters: ${t.getMessage}")
        promise.failure(t)
      }
      override def onCompleted(): Unit = {
        println("Splitters received from Master")
      }
    }

    // ÏÉòÌîåÏùÑ Î≥¥ÎÇº Observer
    val requestObserver = asyncStub.sendSamples(responseObserver)

    try {
      // ÏÉòÌîå Ïä§Ìä∏Î¶¨Î∞ç Ï†ÑÏÜ°
      samples.foreach { keyBytes =>
        val sample = Sample(
          key = com.google.protobuf.ByteString.copyFrom(keyBytes)
        )
        requestObserver.onNext(sample)
      }

      // Ï†ÑÏÜ° ÏôÑÎ£å
      requestObserver.onCompleted()

      // ÏùëÎãµ ÎåÄÍ∏∞ (ÏµúÎåÄ 30Ï¥à)
      import scala.concurrent.Await
      Await.result(promise.future, 120.seconds)

    } catch {
      case e: Exception =>
        requestObserver.onError(e)
        throw e
    }
  }

  def reportShuffleComplete(report: ShuffleCompletionReport): Unit = {
    try {
      val ack = blockingStub
        .withDeadlineAfter(5, java.util.concurrent.TimeUnit.SECONDS)
        .reportShuffleComplete(report)
      println(s"[MasterClient] Shuffle report sent: ${ack.msg}")
    } catch {
      case e: io.grpc.StatusRuntimeException =>
        Console.err.println(s"[MasterClient] ‚ö†Ô∏è Report failed: ${e.getStatus}")
        throw e  // Re-throw to be caught by caller
    }
  }

  def reportMergeComplete(workerId: Int): Unit = {
    try {
      val status = WorkerStatus(workerId = workerId)
      val ack = blockingStub
        .withDeadlineAfter(5, java.util.concurrent.TimeUnit.SECONDS)
        .reportMergeComplete(status)
      println(s"[MasterClient] Merge complete reported: ${ack.msg}")
    } catch {
      case e: io.grpc.StatusRuntimeException =>
        Console.err.println(s"[MasterClient] ‚ö†Ô∏è Report failed: ${e.getStatus}")
        throw e  // Re-throw to be caught by caller
    }
  }

  def queryPartitionSenders(partitionId: Int): Seq[Int] = {
    val query = PartitionSendersQuery(partitionId = partitionId)
    val response = blockingStub.queryPartitionSenders(query)
    response.senderIds
  }

  /** Ïó∞Í≤∞ Ï¢ÖÎ£å */
  def shutdown(): Unit = {
    channel.shutdown()
    channel.awaitTermination(5, TimeUnit.SECONDS)
  }
}